Finish work on navbar and add it to .pug

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -11,13 +11,11 @@ html(lang="en")
     h2 Johannes Knieling, FIAE 14
 
     p.invert.
-      &#9632; 
       #[a(href='Index.html') &Uuml;bersicht]
-      &#9632;
       #[a(href='PAP.html') Programmablaufplan]
-      &#9632;
-      HTML Template Engine PUG 
-      &#9632;
+      #[a.active(href='Inhalt.html') Template Engine Pug]      
+      #[a(href='Pug.html') Codebeispiel Pug]
+
 
     p.
       #[span.bold Hinweis:] Auf dieser Seite befinden sich mehrere Links, die auf 
