--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -6,7 +6,11 @@ html(lang="en")
     link(rel="stylesheet" href="Index.css")
 
   body
- 
+  
+    - var images = 1
+    - var tables = 1
+    - var snippets = 1
+
     include _includes/Header.pug
 
     main
@@ -26,78 +30,124 @@ html(lang="en")
     
       div.center: img.pad-the-dog(src='img/pug.png')
       p.caption.
-        Abbildung 1 - Das Logo von Pug zeigt einen Mops (engl. pug) #[br]
+        Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) #[br]
         Quelle: 
         #[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618; pug-logo Github-Repository von pugjs]
 
       p. 
         Die 
-        #[a(href="https://github.com/pugjs/pug" target="_blank") &#8618; Template Engine #[span.name Pug]]
+        #[a(href="https://github.com/pugjs/pug" target="_blank") &#8618;Template Engine #[span.name Pug]]
         bietet eine vereinfachte Markupsprache, die in HTML umgewandelt werden 
         kann. Dazu verwendet sie die JavaScript-Laufzeitumgebung 
         #[span.name Node.js], mit der ein:e Benutzer:in aber nicht 
         notwendigerweise interagieren muss.
 
       p. 
-        Neben dem vereinfachten Markup bietet #[span.name Pug] Funktionen, die in 
-        HTML nicht oder nur unter Einbindung von JavaScript zu realisieren sind. 
-        Dazu geh&ouml;ren Variablen, Verzweigungen und Iterationen.
+        Neben dem vereinfachten Markup bietet #[span.name Pug] Funktionen, die 
+        in HTML nicht oder nur unter Einbindung von JavaScript zu realisieren 
+        sind. Dazu geh&ouml;ren Variablen, Verzweigungen und Iterationen.
 
       p.
-        #[span.name Pug] bietet zudem M&ouml;glichkeiten, Code aus anderen Dateien
-        einzubinden. Dadurch soll das DRY-Prinzip (&#8222;Don&acute;t Repeat
-        Yourself&#8220;) auch in HTML anwendbar gemacht werden.
+        #[span.name Pug] bietet zudem M&ouml;glichkeiten, Code aus anderen 
+        Dateien einzubinden. Dadurch soll das DRY-Prinzip (&#8222;Don&acute;t 
+        Repeat Yourself&#8220;) auch in HTML anwendbar gemacht werden.
 
       h4 Format des Pug-Markups
 
       p. 
-        #[span.name Pug] vereinfacht das Markup von HTML durch den Verzicht auf die spitzen 
-        Klammern und schlie&szlig;ende Tags. Attribute werden Tags in einfachen 
-        Klammern hinzugef&uuml;gt und Klassen k&ouml;nnen in einer Punktnotation
-        angef&uuml;gt werden.
+        #[span.name Pug] vereinfacht das Markup von HTML durch den Verzicht auf 
+        die spitzen Klammern und schlie&szlig;ende Tags. Attribute werden Tags 
+        in einfachen Klammern hinzugef&uuml;gt und Klassen k&ouml;nnen in einer 
+        Punktnotation angef&uuml;gt werden.
 
-      p Der Anfang dieser Seite sieht in #[span.name Pug] folgenderma&szlig;en aus:
+      p. 
+        Das Einbinden und Beschriften des Logos weiter oben sieht in 
+        #[span.name Pug] folgenderma&szlig;en aus:
 
       pre.
         h1.invert Webprojekt
         h2 Johannes Knieling, FIAE 14
 
         p.invert.
-          &amp;#9632;
-          \#[a(href='Index.html') &Uuml;bersicht]
-          &amp;#9632;
-          \#[a(href='PAP.html') Programmablaufplan]
-          &amp;#9632;
-          HTML Template Engine PUG 
-          &amp;#9632;
+          div.center: img.pad-the-dog(src='img/pug.png')
+          p.caption.
+            Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) \#[br]
+            Quelle: 
+            \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618; pug-logo Github-Repository von pugjs]
     
-      p.caption Codeausschnitt 1 - Ein Beispiel f&uuml;r Formatierung in Pug
+      p.caption Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
 
       p.
-        Die ersten beiden Zeilen sind &Uuml;berschriften, wobei die erste mit
-        der Klasse &#8222;invert&#8220; formatiert wird. Der #[span.code p]-Tag wird 
-        ebenfalls mit dieser formatiert und stellt die Navigationsleiste dar.
-        Besondere Beachtung verdient hier der abschlie&szlig;ende Punkt nach
-        der Klasse. Dieser zeigt #[span.name Pug] an, dass ein mehrzeiliger Textblock folgt.
+        In der ersten Zeile wird das Bild eingef&uuml;gt. Dem 
+        #[span.code img]-Tag wird in Klammern das #[span.code src]-Atrribut 
+        &uuml;bergeben. Zudem wird mit der Punktnotation die Klasse 
+        #[span.code pad-the-dog] zugewiesen, die Padding um das Bild herum
+        hinzuf&uuml;gt, da sonst der Rahmen, der im CCS der Seite f&uuml;r
+        Bilder definiert ist, zu nahe am Bildinhalt w&auml;re, was nicht gut 
+        aussieht.
 
       p.
-        Die Zeilen, die den Inhalt des Tags darstellen, sind einger&uuml;ckt,
-        da Pug Einr&uuml;ckung zur Hierarchisierung verwendet, &auml;hnlich
-        der Programmiersprache #[span.name Python] oder der #[span.name Pug] verwandten Markupsprache
-        #[span.name YAML]. 
+        Vor dem Bild wird ein #[span.code div] mit der Klasse 
+        #[span.code center] definiert, das daf&uuml;r sorgt, dass das Bild
+        korrekt zentriert wird. Es dient auch als Beispiel f&uuml;r &#822;Block 
+        Expansion&#8220;, eine vereinfachte Schreibweise f&uuml;r verschachtelte
+        Tags, die mit Doppelpunkt und Leerzeichen aneinander gef&uuml;gt werden 
+        k&ouml;nnen.
 
       p.
-        Innerhalb eines anderen Tags müssen HTML-Tags mit den 
-        Zeichen #[span.code \#[...]] umschlossen werden, da sie sonst als Text interpretiert 
-        werden. Die Raute gibt an, dass #[span.name Pug] beim Umwandeln in HTML stattdessen
-        den Ausdruck in den eckigen Klammern als Code interpolieren soll.
+        Der Punkt nach dem #[span.code p]-Tag  gibt an, dass der Inhalt des Tags
+        sich &uuml;ber mehrere Zeilen erstreckt. Dieser muss entsprechend
+        einger&uuml;ckt sein.
+      
+      h4 Interpolation
+
+      p. 
+        In Codeausschnitt 1 ist auch zu sehen, wie Tags innerhalb 
+        eines ansonsten als Text behandelten Blocks verwendet werden 
+        k&ouml;nnen. Mit dem Konstrukt 
+        #[span.code \#[&lt;Tag&gt; &lt;Inhalt&gt;]] wird angezeigt, dass dieser
+        Bereich beim Umwandeln in HTML als Tag interpoliert werden soll.
+
+      p. 
+        Mit dem Mittel der Interpolation k&ouml;nnen auch zuvor definierte 
+        Variablen in Texte eingef&uuml;gt werden. In der Beschriftung wird dies
+        verwendet, um die Nummerierung des Bildes festzulegen. Am Beginn des 
+        Dokuments (nicht Teil des Codeausschnitts) wurde #[span.code images] mit
+        dem Wert #[span.code 1] initialisiert. Hier wird dieser Wert 
+        eingef&uuml;gt und postinkrementiert, so dass bei der n&auml;chsten
+        Verwendung oder beim Einf&uuml;gen eines Bildes (mit entsprechender
+        Verwendung der Variablen in der Beschriftung) jeweils korrekt 
+        gez&auml;hlt w&uuml;rde. Diese Funktion wurde auch f&uuml; die 
+        Codeausschnitte auf dieser Seite verwendet, wo sie mehr als nur 
+        Beispielcharakter hat, da mehrere davon verwendet wurden.
+
+      h4 Includes
+
+      p. 
+        Mit dem Befehl &#8222;include&#8220; kann in eine #[span.code .pug]-Datei der Inhalt
+        einer anderen #[span.name Pug]-Datei eingbunden werden. Dieser wird an der jeweiligen
+        Stelle einge&uuml;gt. Dadurch k&ouml;nnen Seitenbausteine gem&auml;&szlig;
+        dem DRY-Prinzip wiederverwendet werden.
+
+      p. 
+        Dies macht insbesondere f&uuml;r immer wiederkehrende Teile des 
+        Seitendesigns Sinn. So wurden auf dieser Seite der Kopfteil, die
+        Navigationsleiste und die Fu&szlig;zeile als #[span.code include] 
+        realisiert.
+
+      pre include _includes/Header.pug
+
+      p.caption. 
+        Codeausschnitt #{snippets++} - Einbinden von Kopfteil und 
+        Navigationsleiste in dieses Dokument
 
       h4 Variablen, Iteration und Verzweigungen 
 
       p. 
         Eine interessante Funktionalit&auml;tserweiterung gegen&uuml;ber HTML
         ist die M&ouml;glichkeit, Programmierfunktionen wie Variablen,
-        Verzweigungen und Iterationen direkt in der #[span.code].pug]-Datei zu verwenden.
+        Verzweigungen und Iterationen direkt in der #[span.code .pug]-Datei zu 
+        verwenden.
 
       p Ein Beispiel f&uuml;r den Einsatz dieser Funktionen :
 
@@ -114,13 +164,13 @@ html(lang="en")
               td=i++
               td.last-in-row=item
 
-      p.caption Tabelle 1 - Erzeugen einer Tabelle aus Daten
+      p.caption Tabelle #{tables++} - Erzeugen einer Tabelle aus Daten
 
       p.
         An dieser Tabelle ist zun&auml; nichts ungew&ouml;hnliches zu erkennen. 
         Auch ein Blick in den Seitenquelltext zeigt nur eine herk&ouml;mmliche 
-        HTML-Tabelle. In der #[span.name Pug]-Template sieht diese Tabelle allerdings so
-        aus:
+        HTML-Tabelle. In der #[span.name Pug]-Template sieht diese Tabelle 
+        allerdings so aus:
 
       pre.
         - var i = 1
@@ -136,7 +186,7 @@ html(lang="en")
                 td=i++
                 td.last-in-row=item
 
-      p.caption Codeausschnitt 2 - Erzeugen einer Tabelle aus Daten 
+      p.caption Codeausschnitt #{snippets++} - Erzeugen einer Tabelle aus Daten 
         
       p.
         Statt einer statischen Definition der Tabelle werden in diesem Code aus
@@ -145,30 +195,17 @@ html(lang="en")
         erlaubt das einfache Entfernen oder Hinzuf&uuml;gen von Eintr&auml;gen.
       
       p.
-        Auch eine Verzweigung ist hier zu sehen. Die letzte Zeile der Tabelle muss
-        aufgrund der CSS-Definitionen als solche ausgezeichnet werden. Dies wird
-        durch einen Vergleich der Z&auml;hlvariablen mit der L&auml;nge des
+        Auch eine Verzweigung ist hier zu sehen. Die letzte Zeile der Tabelle 
+        muss aufgrund der CSS-Definitionen als solche ausgezeichnet werden. Dies 
+        wird durch einen Vergleich der Z&auml;hlvariablen mit der L&auml;nge des
         Arrays erreicht.
 
       h4 Weitere Funktionen
 
       p.
-        Weitere Funktionen, die #[span.name Pug] bereitstellt, die aber im Rahmen dieses
-        Projekts nicht eingesetzt wurden, sollen trotzdem kurz angeschnitten
-        werden.
-
-      h5 Includes
-
-      p. 
-        Mit dem Befehl &#8222;include&#8220; kann in eine #[span.code .pug]-Datei der Inhalt
-        einer anderen #[span.name Pug]-Datei eingbunden werden. Dieser wird an der jeweiligen
-        Stelle einge&uuml;gt. Dadurch k&ouml;nnen Seitenbausteine gem&auml;&szlig;
-        dem DRY-Prinzip wiederverwendet werden.
-
-      p. 
-        W&auml;ren die anderen Seiten dieses Projekt ebenfalls aus einer
-        Pug-Vorlage erzeugt worden, w&auml;re es z.B. sinnvoll gewesen, den
-        Seitenkopf und die Fu&szlig;zeile jeweils als Include zu realisieren.
+        Weitere Funktionen, die #[span.name Pug] bereitstellt, die aber im 
+        Rahmen dieses Projekts nicht eingesetzt wurden, sollen trotzdem kurz 
+        angeschnitten werden.
 
       h5 Mixins
 
@@ -205,42 +242,51 @@ html(lang="en")
             &lt;/ul&gt;
 
       p.caption.
-        Codebeispiel 3 - Mixin zum Erzeugen einer Liste#[br]
+        Codebeispiel #{snippets++} - Mixin zum Erzeugen einer Liste#[br]
         Quelle: 
         #[a(href="https://pugjs.org/language/mixins.html") &#8618; Pug Dokumentation: Mixins]
 
       p. 
         Durch den zweifachen Aufruf von #[span.code +list]; am Ende des 
-        #[span.name Pug]-Ausschnitts werden bei der Konversion zu HTML zwei Listen erzeugt.
+        #[span.name Pug]-Ausschnitts werden bei der Konversion zu HTML zwei 
+        Listen erzeugt.
 
       h5 Vererbung
 
       p. 
-        Templates k&ouml;nnen in #[span.name Pug] andere Templates erweitern und deren Inhalt
-        erben. In einer vererbenden Template k&ouml;nnen Bl&ouml;cke definiert 
-        werden, die entweder mit einen Standardinhalt gef&uuml;llt oder in der 
-        Kindtemplate definiert und ersetzt werden k&ouml;nnen.
+        Templates k&ouml;nnen in #[span.name Pug] andere Templates erweitern 
+        und deren Inhalt erben. In einer vererbenden Template k&ouml;nnen 
+        Bl&ouml;cke definiert werden, die entweder mit einen Standardinhalt 
+        gef&uuml;llt oder in der Kindtemplate definiert und ersetzt werden 
+        k&ouml;nnen.
+
+      p. 
+        Ein Verwendungszweck daf&umml;r ist das Erstellen einer Template 
+        f&uuml;r das Seitenlayout, in die der eigentliche von Seite zu Seite
+        variable Inhalt als Block aus einer anderen Datei eingef&uuml;gt wird.
 
       h5 Filter
 
       p. 
         Eine komplexere Funktion sind Filter, mit denen Code in anderen
-        Programmiersprachen in eine #[span.name Pug]-Template eingef&uuml;gt werden kann.
-        Dabei ist zu beachten, das dieser Code dann beim Kompilieren der 
-        Template in eine HTML-Datei interpretiert wird. Deshalb kann mit
-        ihnen kein dynamischer Inhalt erzeugt werden.
+        Programmiersprachen in eine #[span.name Pug]-Template eingef&uuml;gt 
+        werden kann. Dabei ist zu beachten, das dieser Code dann beim 
+        Kompilieren der Template in eine HTML-Datei interpretiert wird. Deshalb 
+        kann mit ihnen allein kein dynamischer Inhalt erzeugt werden.
 
       h4 Umwandlung von Pug in HTML
 
       p. 
-        Um eine in #[span.name Pug] geschriebene Template in eine HTML-Datei, die ein
-        Browser anzeigen kann, umzuwandeln, gibt es mehrere M&ouml;glichkeiten.
+        Um eine in #[span.name Pug] geschriebene Template in eine HTML-Datei, 
+        die ein Browser anzeigen kann, umzuwandeln, gibt es mehrere 
+        M&ouml;glichkeiten:
 
       ol
         li.
-          Da #[span.name Pug] auf #[span.name Node.js] basiert, kann es, wenn #[span.name Node.js] auf dem System
-          installiert ist, &uuml;ber entsprechende Aufrufe des Node Package
-          Managers #[span.name npm] umgewandelt werden.
+          Da #[span.name Pug] auf #[span.name Node.js] basiert, kann es, wenn 
+          #[span.name Node.js] auf dem System installiert ist, &uuml;ber 
+          entsprechende Aufrufe des Node Package Managers #[span.name npm] 
+          installiert und damit umgewandelt werden.
         li
           | Eine Option, die zum Experimentieren einl&auml;dt, sind 
           | Online-Konverter, die oft auch eine Umwandlung in Echtzeit 
@@ -258,12 +304,12 @@ html(lang="en")
       h4 Fazit  
         
       p.
-        Die Arbeit mit #[span.name Pug] vereinfacht das Erstellen von Webseiten. Der
-        Wegfall der HTML-typischen spitzen Klammern und der schlie&szlig;enden
-        Tags erh&ouml;ht die Arbeitsgeschwindigkeit. Die Strukturierung durch
-        Einr&uuml;ckungen erzwingt eine konsequent ordentliche Formatierung.
-        Beides zusammen erh&ouml;ht die Lesbarkeit des Quelltexts gegen&uuml;ber 
-        HTML.
+        Die Arbeit mit #[span.name Pug] vereinfacht das Erstellen von Webseiten. 
+        Der Wegfall der HTML-typischen spitzen Klammern und der 
+        schlie&szlig;enden Tags erh&ouml;ht die Arbeitsgeschwindigkeit. 
+        Die Strukturierung durch Einr&uuml;ckungen erzwingt eine konsequent 
+        ordentliche Formatierung. Beides zusammen erh&ouml;ht die Lesbarkeit 
+        des Quelltexts gegen&uuml;ber HTML.
 
       p.
         In diesem Projekt wurden die M&ouml;glichkeiten, die sich durch die
@@ -274,10 +320,9 @@ html(lang="en")
         Generierens einer Tabelle nur ein winziger Teil ist.
 
       p.
-        Zum Abschluss noch ein Link zur 
-        #[a(href="../Pug.html") #[span.name Pug]-Datei, aus der diese Seite erstellt wurde.] 
+        Zum Abschluss noch ein Link zum 
+        #[a(href="Pug.html") #[span.name Pug]-Code, aus der diese Seite erstellt wurde.] 
         Vergleichen Sie diese doch einmal mit dem HTML-Quelltext dieser Seite
         oder fügen Sie sie in einen der oben verlinkten Konverter ein!
-
     
     include _includes/Footer.pug
