Make some small corrections, add Github-Link

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -6,7 +6,7 @@ html(lang="en")
     link(rel="stylesheet" href="Index.css")
 
   body
-  
+
     - var images = 1
     - var tables = 1
     - var snippets = 1
@@ -73,7 +73,7 @@ html(lang="en")
           p.caption.
             Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) \#[br]
             Quelle: 
-            \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618; pug-logo Github-Repository von pugjs]
+            \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618;pug-logo Github-Repository von pugjs]
     
       p.caption Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
 
@@ -244,7 +244,7 @@ html(lang="en")
       p.caption.
         Codebeispiel #{snippets++} - Mixin zum Erzeugen einer Liste#[br]
         Quelle: 
-        #[a(href="https://pugjs.org/language/mixins.html") &#8618; Pug Dokumentation: Mixins]
+        #[a(href="https://pugjs.org/language/mixins.html") &#8618;Pug Dokumentation: Mixins]
 
       p. 
         Durch den zweifachen Aufruf von #[span.code +list]; am Ende des 
@@ -292,13 +292,13 @@ html(lang="en")
           | Online-Konverter, die oft auch eine Umwandlung in Echtzeit 
           | bereitstellen. Beispiele:
           ul
-            li #[a(href="https://pug2html.com/" target="_blank") &#8618; Pug2HTML] 
-            li #[a(href="https://pughtml.com/" target="_blank") &#8618; Pug-HTML] 
-            li #[a(href="https://www.cssportal.com/pug-to-html/" target="_blank") &#8618; Konverter bei {CSS}Portal]
+            li #[a(href="https://pug2html.com/" target="_blank") &#8618;Pug2HTML] 
+            li LINK WIEDER FINDEN
+            li #[a(href="https://www.cssportal.com/pug-to-html/" target="_blank") &#8618;Konverter bei {CSS}Portal]
         li. 
           Plugins in einer IDE k&ouml;nnen ebenfalls Konvertierungen
           durchf&uuml;hren. F&uuml;r dieses Projekt wurde das Plugin 
-          #[a.name(href="https://marketplace.visualstudio.com/items?itemName=Wscats.eno" target="_blank") &#8618; Compile Hero Pro]
+          #[a.name(href="https://marketplace.visualstudio.com/items?itemName=Wscats.eno" target="_blank") &#8618;Compile Hero Pro]
           f&uuml;r #[span.name Visual Studio Code] verwendet.
 
       h4 Fazit  
@@ -323,6 +323,8 @@ html(lang="en")
         Zum Abschluss noch ein Link zum 
         #[a(href="Pug.html") #[span.name Pug]-Code, aus der diese Seite erstellt wurde.] 
         Vergleichen Sie diese doch einmal mit dem HTML-Quelltext dieser Seite
-        oder fügen Sie sie in einen der oben verlinkten Konverter ein!
+        oder fügen Sie sie in einen der oben verlinkten Konverter ein! Gerne
+        k&ouml;nnen Sie auch das gesamte Projekt begutachten, denn es hat 
+        #[a(href="https://github.com/joknie/webprojekt-ae" target="_blank") &#8618;ein GitHub-Repo].
     
     include _includes/Footer.pug
