--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -75,7 +75,8 @@ html(lang="en")
             Quelle: 
             \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618;pug-logo Github-Repository von pugjs]
     
-      p.caption Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
+      p.caption.
+        Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
 
       p.
         In der ersten Zeile wird das Bild eingef&uuml;gt. Dem 
@@ -96,8 +97,8 @@ html(lang="en")
 
       p.
         Der Punkt nach dem #[span.code p]-Tag  gibt an, dass der Inhalt des Tags
-        sich &uuml;ber mehrere Zeilen erstreckt. Dieser muss entsprechend
-        einger&uuml;ckt sein.
+        nicht in der selben Zeile folgt, sondern sich einger&uuml;ckter Block 
+        folgt, der sich ggf. &uuml;ber mehrere Zeilen erstrecken kann.
       
       h4 Interpolation
 
@@ -124,10 +125,11 @@ html(lang="en")
       h4 Includes
 
       p. 
-        Mit dem Befehl &#8222;include&#8220; kann in eine #[span.code .pug]-Datei der Inhalt
-        einer anderen #[span.name Pug]-Datei eingbunden werden. Dieser wird an der jeweiligen
-        Stelle einge&uuml;gt. Dadurch k&ouml;nnen Seitenbausteine gem&auml;&szlig;
-        dem DRY-Prinzip wiederverwendet werden.
+        Mit dem Befehl &#8222;include&#8220; kann in eine 
+        #[span.code .pug]-Datei der Inhalt einer anderen #[span.name Pug]-Datei 
+        eingbunden werden. Dieser wird an der jeweiligen Stelle einge&uuml;gt. 
+        Dadurch k&ouml;nnen Seitenbausteine gem&auml;&szlig; dem DRY-Prinzip 
+        wiederverwendet werden.
 
       p. 
         Dies macht insbesondere f&uuml;r immer wiederkehrende Teile des 
