Fix missing slashes for self-closing tags

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -28,10 +28,10 @@ html(lang="en")
         Es gibt viele Ans&auml;tze, diese Arbeit zu vereinfachen und den Code 
         lesbarer zu machen. Eine davon wird hier vorgestellt.
     
-      div.center: img.pad-the-dog(src='img/pug.png')
+      div.center: img.pad-the-dog(src='img/pug.png')/
       p.caption.
-        Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) #[br]
-        Quelle: 
+        Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
+        #[br/] Quelle: 
         #[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618; pug-logo Github-Repository von pugjs]
 
       p. 
@@ -69,9 +69,9 @@ html(lang="en")
         h2 Johannes Knieling, FIAE 14
 
         p.invert.
-          div.center: img.pad-the-dog(src='img/pug.png')
+          div.center: img.pad-the-dog(src='img/pug.png') /
           p.caption.
-            Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) \#[br]
+            Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) \#[br /]
             Quelle: 
             \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618;pug-logo Github-Repository von pugjs]
     
