Add table HTML code snippet to content

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -202,6 +202,41 @@ html(lang="en")
         wird durch einen Vergleich der Z&auml;hlvariablen mit der L&auml;nge des
         Arrays erreicht.
 
+      p. 
+        Zum Vergleich die Tabelle in HTML so wie der gezeigte Code sie erzeugt.
+        Neben der Lesbarkeit soll dies auch die einfachere Anpassbar- und 
+        Erweiterbarkeit des Baus der Tabelle mit #[span.name Pug] demonstrieren.
+
+      pre. 
+        &lt;table&gt;
+          &lt;tr&gt;         
+            &lt;td&gt;1&lt;/td&gt;
+            &lt;td class="last-in-row"&gt;Alice&lt;/td&gt;
+          &lt;/tr&gt;
+          &lt;tr&gt;         
+            &lt;td&gt;2&lt;/td&gt;
+            &lt;td class="last-in-row"&gt;Bob&lt;/td&gt;
+          &lt;/tr&gt;
+          &lt;tr&gt;         
+            &lt;td&gt;3&lt;/td&gt;
+            &lt;td class="last-in-row"&gt;Charlie&lt;/td&gt;
+          &lt;/tr&gt;
+          &lt;tr&gt;         
+            &lt;td&gt;4&lt;/td&gt;
+            &lt;td class="last-in-row"&gt;Dave&lt;/td&gt;
+          &lt;/tr&gt;
+          &lt;tr&gt;         
+            &lt;td&gt;5&lt;/td&gt;
+            &lt;td class="last-in-row"&gt;Eve&lt;/td&gt;
+          &lt;/tr&gt;
+          &lt;tr&gt;         
+            &lt;td class="last-in-col"&gt;6&lt;/td&gt;
+            &lt;td class="last-in-row last-in-col"&gt;Frank&lt;/td&gt;
+          &lt;/tr&gt;
+        &lt;/table&gt;
+
+      p.caption Codeausschnitt #{snippets++} - Die Tabelle in HTML 
+
       h4 Weitere Funktionen
 
       p.
