--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -298,7 +298,7 @@ html(lang="en")
         k&ouml;nnen.
 
       p. 
-        Ein Verwendungszweck daf&umml;r ist das Erstellen einer Template 
+        Ein Verwendungszweck daf&uuml;r ist das Erstellen einer Template 
         f&uuml;r das Seitenlayout, in die der eigentliche von Seite zu Seite
         variable Inhalt als Block aus einer anderen Datei eingef&uuml;gt wird.
 
