--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -32,7 +32,7 @@ html(lang="en")
       p.caption.
         Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
         #[br/] Quelle: 
-        #[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618; pug-logo Github-Repository von pugjs]
+       #[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618;pug-logo Github-Repository von pugjs]
 
       p. 
         Die 
@@ -61,31 +61,46 @@ html(lang="en")
         Punktnotation angef&uuml;gt werden.
 
       p. 
-        Das Einbinden und Beschriften des Logos weiter oben sieht in 
-        #[span.name Pug] folgenderma&szlig;en aus:
+        Der Beginn des vorangegangenen Abschnitts sieht in #[span.name Pug] zum 
+        Beispiel so aus:
 
       pre.
-        h1.invert Webprojekt
-        h2 Johannes Knieling, FIAE 14
+        h3 PUG als HTML-Pr&auml;prozessor
 
-        p.invert.
-          div.center: img.pad-the-dog(src='img/pug.png') /
-          p.caption.
-            Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) \#[br /]
-            Quelle: 
-            \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &#8618;pug-logo Github-Repository von pugjs]
+        p.
+          Die Arbeit mit HTML erfordert in der Regel viel Tippen und viele 
+          Sonderzeichen, etwa bei der Eingabe von HTML-Tags und -Entit&auml;ten. 
+          Es gibt viele Ans&auml;tze, diese Arbeit zu vereinfachen und den Code 
+          lesbarer zu machen. Eine davon wird hier vorgestellt.
+    
+        div.center: img.pad-the-dog(src='img/pug.png')/
+        p.caption.
+          Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
+          \#[br/] Quelle: 
+          \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &amp;#8618;pug-logo Github-Repository von pugjs]
     
       p.caption.
         Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
 
+      p. 
+        In der ersten Zeile wird eine &Uuml;berschrift definiert. Der 
+        #[span.code h3]-Tag steht ohne Klammern am Anfang der Zeile und 
+        ben&ouml;tigt keinen schlie&szlig;enden Tag am Ende. Der Inhalt des Tags 
+        wird einfach im Anschluss ausgeschrieben.
+
+      p. 
+        Der Inhalt des folgenden #[span.code p]-Tags erstreckt sich &uuml;ber 
+        mehrere Zeilen. Dies wird durch die Schreibweise #[span.code p.] 
+        angezeigt. Der Inhalt des Tags muss dann entsprechend einger&uuml;ckt 
+        werden.
+
       p.
-        In der ersten Zeile wird das Bild eingef&uuml;gt. Dem 
-        #[span.code img]-Tag wird in Klammern das #[span.code src]-Atrribut 
-        &uuml;bergeben. Zudem wird mit der Punktnotation die Klasse 
-        #[span.code pad-the-dog] zugewiesen, die Padding um das Bild herum
-        hinzuf&uuml;gt, da sonst der Rahmen, der im CCS der Seite f&uuml;r
-        Bilder definiert ist, zu nahe am Bildinhalt w&auml;re, was nicht gut 
-        aussieht.
+        Dann wird das Bild eingef&uuml;gt. Dem #[span.code img]-Tag wird in 
+        Klammern das #[span.code src]-Attribut &uuml;bergeben. Zudem wird mit 
+        der Punktnotation die Klasse #[span.code pad-the-dog] zugewiesen, die 
+        Padding um das Bild herum hinzuf&uuml;gt, da sonst der Rahmen, der im 
+        CSS der Seite f&uuml;r Bilder definiert ist, zu nahe am Bildinhalt 
+        w&auml;re, was nicht gut aussieht.
 
       p.
         Vor dem Bild wird ein #[span.code div] mit der Klasse 
@@ -94,12 +109,7 @@ html(lang="en")
         Expansion&#8220;, eine vereinfachte Schreibweise f&uuml;r verschachtelte
         Tags, die mit Doppelpunkt und Leerzeichen aneinander gef&uuml;gt werden 
         k&ouml;nnen.
-
-      p.
-        Der Punkt nach dem #[span.code p]-Tag  gibt an, dass der Inhalt des Tags
-        nicht in der selben Zeile folgt, sondern sich einger&uuml;ckter Block 
-        folgt, der sich ggf. &uuml;ber mehrere Zeilen erstrecken kann.
-      
+        
       h4 Interpolation
 
       p. 
