Removed address from code example for readability

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -77,10 +77,11 @@ html(lang="en")
         p.caption.
           Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
           \#[br/] Quelle: 
-          \#[a(href="https://github.com/pugjs/pug-logo/blob/master/PNG/pug-final-logo_-colour-128.png") &amp;#8618;pug-logo Github-Repository von pugjs]
+          \#[a(href="...") &amp;#8618;pug-logo Github-Repository von pugjs]
     
       p.caption.
         Codeausschnitt #{snippets++} - Ein Beispiel f&uuml;r Formatierung in Pug
+        #[br/] Die Linkadresse wurde zu Gunsten der Lesbarkeit entfernt.
 
       p. 
         In der ersten Zeile wird eine &Uuml;berschrift definiert. Der 
@@ -109,7 +110,7 @@ html(lang="en")
         Expansion&#8220;, eine vereinfachte Schreibweise f&uuml;r verschachtelte
         Tags, die mit Doppelpunkt und Leerzeichen aneinander gef&uuml;gt werden 
         k&ouml;nnen.
-        
+
       h4 Interpolation
 
       p. 
