Made a proofreading pass

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -75,7 +75,7 @@ html(lang="en")
     
         div.center: img.pad-the-dog(src='img/pug.png')/
         p.caption.
-          Abbildung #{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
+          Abbildung \#{images++} - Das Logo von Pug zeigt einen Mops (engl. pug) 
           \#[br/] Quelle: 
           \#[a(href="...") &amp;#8618;pug-logo Github-Repository von pugjs]
     
@@ -87,12 +87,12 @@ html(lang="en")
         In der ersten Zeile wird eine &Uuml;berschrift definiert. Der 
         #[span.code h3]-Tag steht ohne Klammern am Anfang der Zeile und 
         ben&ouml;tigt keinen schlie&szlig;enden Tag am Ende. Der Inhalt des Tags 
-        wird einfach im Anschluss ausgeschrieben.
+        wird im Anschluss ausgeschrieben.
 
       p. 
         Der Inhalt des folgenden #[span.code p]-Tags erstreckt sich &uuml;ber 
         mehrere Zeilen. Dies wird durch die Schreibweise #[span.code p.] 
-        angezeigt. Der Inhalt des Tags muss dann entsprechend einger&uuml;ckt 
+        angezeigt. Der Inhalt des Tags muss entsprechend einger&uuml;ckt 
         werden.
 
       p.
@@ -106,7 +106,7 @@ html(lang="en")
       p.
         Vor dem Bild wird ein #[span.code div] mit der Klasse 
         #[span.code center] definiert, das daf&uuml;r sorgt, dass das Bild
-        korrekt zentriert wird. Es dient auch als Beispiel f&uuml;r &#822;Block 
+        korrekt zentriert wird. Es dient auch als Beispiel f&uuml;r &#8222;Block 
         Expansion&#8220;, eine vereinfachte Schreibweise f&uuml;r verschachtelte
         Tags, die mit Doppelpunkt und Leerzeichen aneinander gef&uuml;gt werden 
         k&ouml;nnen.
