More changes from proofreading

--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -129,7 +129,7 @@ html(lang="en")
         eingef&uuml;gt und postinkrementiert, so dass bei der n&auml;chsten
         Verwendung oder beim Einf&uuml;gen eines Bildes (mit entsprechender
         Verwendung der Variablen in der Beschriftung) jeweils korrekt 
-        gez&auml;hlt w&uuml;rde. Diese Funktion wurde auch f&uuml; die 
+        gez&auml;hlt w&uuml;rde. Diese Funktion wurde auch f&uuml;r die 
         Codeausschnitte auf dieser Seite verwendet, wo sie mehr als nur 
         Beispielcharakter hat, da mehrere davon verwendet wurden.
 
@@ -138,7 +138,7 @@ html(lang="en")
       p. 
         Mit dem Befehl &#8222;include&#8220; kann in eine 
         #[span.code .pug]-Datei der Inhalt einer anderen #[span.name Pug]-Datei 
-        eingbunden werden. Dieser wird an der jeweiligen Stelle einge&uuml;gt. 
+        eingbunden werden. Dieser wird an der jeweiligen Stelle eingef&uuml;gt. 
         Dadurch k&ouml;nnen Seitenbausteine gem&auml;&szlig; dem DRY-Prinzip 
         wiederverwendet werden.
 
@@ -310,7 +310,7 @@ html(lang="en")
 
       p. 
         Ein Verwendungszweck daf&uuml;r ist das Erstellen einer Template 
-        f&uuml;r das Seitenlayout, in die der eigentliche von Seite zu Seite
+        f&uuml;r das Seitenlayout, in die der eigentliche, von Seite zu Seite
         variable Inhalt als Block aus einer anderen Datei eingef&uuml;gt wird.
 
       h5 Filter
