--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -18,8 +18,9 @@ html(lang="en")
       p.
         #[span.bold Hinweis:] Auf dieser Seite befinden sich mehrere Links, die 
         auf externe Seiten verweisen. Diese sind mit dem Symbol &#8618; 
-        gekennzeichnet. F&uuml;r die verlinkten Seiten und deren Inhalte kann 
-        keine Verantwortung &uuml;bernommen werden.
+        gekennzeichnet und werden in einem neuen Tab oder Fenster ge&ouml;ffnet. 
+        F&uuml;r die verlinkten Seiten und deren Inhalte kann keine 
+        Verantwortung &uuml;bernommen werden.
 
       h3 PUG als HTML-Pr&auml;prozessor
 
