--- a/_includes/Header.pug
+++ b/_includes/Header.pug
@@ -2,6 +2,9 @@ header
   h1.invert Webprojekt
   h2 Johannes Knieling, FIAE14
 
+  - var capture = filename.match(/(\w+)\.pug/);
+  - var pagename= capture[0].replace(/\.pug/, "");
+
 nav.invert
 
   - 
@@ -11,8 +14,11 @@ nav.invert
       Inhalt:"Template Engine Pug",
       Pug:"Codebeispiel Pug"
     };   
-  
+ 
   each value, key in fruits  
     - var url = key + ".html";
-    a(href=url) #{value}
+    if key == pagename
+      a.active(href=url) #{value}
+    else  
+      a(href=url) #{value}
     
