--- a/_includes/Nav.pug
+++ b/_includes/Nav.pug
@@ -3,16 +3,16 @@
     Index:"Übersicht",
     PAP:"Programmablaufplan",
     Inhalt:"Template Engine Pug",
-    Pug:"Codebeispiel Pug"
+    Pug:"Codebeispiele Pug"
   };   
 
 - var capture = filename.match(/(\w+)\.pug/);
 - var pagename= capture[0].replace(/\.pug/, "");
 
 each value, key in pages
-  - var url = key + ".html";
   if key == pagename
-    a.active(href=url) #{value}
+    span.active #{value}
   else  
+    - var url = key + ".html";
     a(href=url) #{value}
   
