--- a/Inhalt.pug
+++ b/Inhalt.pug
@@ -107,7 +107,7 @@ block content
   h4 Interpolation
 
   p. 
-    In Codeausschnitt 1 ist auch zu sehen, wie Tags innerhalb 
+    Im Codeausschnitt ist auch zu sehen, wie Tags innerhalb 
     eines ansonsten als Text behandelten Blocks verwendet werden 
     k&ouml;nnen. Mit dem Konstrukt 
     #[span.code \#[&lt;Tag&gt; &lt;Inhalt&gt;]] wird angezeigt, dass dieser
@@ -141,7 +141,7 @@ block content
     variable Inhalt als Block aus einer anderen Datei eingef&uuml;gt wird.
 
   p.
-    Diese Seite und das #[a(href="Pug.html") Codebeispiel] werden beide aus
+    Diese Seite und #[a(href="Pug.html") die Codebeispiele] werden beide aus
     einer gemeinsamen Template abgeleitet. Diese enth&auml;lt das 
     HTML-Ger&uuml;st mit einem Platzhalter f&uuml;r den Inhalt. Die Dateien, aus 
     denen die genannten Seiten generiert werden, erweitern diese lediglich.
@@ -227,7 +227,7 @@ block content
   p.caption Tabelle #{tables++} - Erzeugen einer Tabelle aus Daten
 
   p.
-    An dieser Tabelle ist zun&auml; nichts ungew&ouml;hnliches zu erkennen. 
+    An dieser Tabelle ist zun&auml;chst nichts ungew&ouml;hnliches zu erkennen. 
     Auch ein Blick in den Seitenquelltext zeigt nur eine herk&ouml;mmliche 
     HTML-Tabelle. In der #[span.name Pug]-Template sieht diese Tabelle 
     allerdings so aus:
@@ -374,7 +374,7 @@ block content
       | bereitstellen. Beispiele:
       ul
         li #[a(href="https://pug2html.com/" target="_blank") &#8618;Pug2HTML] 
-        li LINK WIEDER FINDEN
+        li #[a(href="https://pughtml.com/" target="_blank") &#8618;Pug-HTML]
         li #[a(href="https://www.cssportal.com/pug-to-html/" target="_blank") &#8618;Konverter bei {CSS}Portal]
     li. 
       Plugins in einer IDE k&ouml;nnen ebenfalls Konvertierungen
@@ -392,18 +392,24 @@ block content
     ordentliche Formatierung. Beides zusammen erh&ouml;ht die Lesbarkeit 
     des Quelltexts gegen&uuml;ber HTML.
 
-  p.
-    In diesem Projekt wurden die M&ouml;glichkeiten, die sich durch die
-    zusa&auml;tzlichen Funktionen, die Pug bietet, bestenfalls angedeutet.
-    Neben der M&ouml;glichkeit, eine Website unter Ber&uuml;cksichtigung
-    des DRY-Prinzips aufzubauen, er&ouml;ffnet die Arbeit mit Daten einen
-    sehr gro&szlig;en Spielraum, von dem das oben gezeigte Beispiel des 
-    Generierens einer Tabelle nur ein winziger Teil ist.
+  p. 
+    Die Modularisierung mittels #[span.code include] und Vererbung 
+    erm&ouml;glicht eine Wiederverwendung von Seitenbausteinen ohne copy/paste.
+    Zudem erlaubt es eine einfachere und weniger fehleranf&auml;llige 
+    Bearbeitung solcher Bausteine.
 
   p.
-    Zum Abschluss noch ein Link zum 
-    #[a(href="Pug.html") #[span.name Pug]-Code, aus der diese Seite erstellt wurde.] 
-    Vergleichen Sie diese doch einmal mit dem HTML-Quelltext dieser Seite
-    oder fügen Sie sie in einen der oben verlinkten Konverter ein! Gerne
-    k&ouml;nnen Sie auch das gesamte Projekt begutachten, denn es hat 
+    In diesem Projekt wurden die M&ouml;glichkeiten, die sich durch die
+    zusa&auml;tzlichen Funktionen, die #[span.name Pug] bietet, bestenfalls 
+    angedeutet. Neben der M&ouml;glichkeit, eine Website unter 
+    Ber&uuml;cksichtigung des DRY-Prinzips aufzubauen, er&ouml;ffnet die Arbeit 
+    mit Daten einen sehr gro&szlig;en Spielraum, von dem das oben gezeigte 
+    Beispiel des Generierens einer Tabelle oder der Navigationsleiste 
+    (vorgestellt als eines der #[a(href="Pug.html") Codebeispiele]) nur ein 
+    winziger Teil ist.
+
+  p.
+    Dieses Projekt hat auch ein
     #[a(href="https://github.com/joknie/webprojekt-ae" target="_blank") &#8618;ein GitHub-Repo].
+    Dort k&ouml;nnen die #[span.code Pug]-Dateien, die nicht zu den 
+    abgegebenen Dateien geh&ouml;ren, begutachtet werden.
