Make link disclaimer an include

--- a/Pug.pug
+++ b/Pug.pug
@@ -4,12 +4,7 @@ block content
 
   - var snippets = 1;
 
-  p.
-    #[span.bold Hinweis:] Auf dieser Seite befinden sich mehrere Links, die 
-    auf externe Seiten verweisen. Diese sind mit dem Symbol &#8618; 
-    gekennzeichnet und werden in einem neuen Tab oder Fenster ge&ouml;ffnet. 
-    F&uuml;r die verlinkten Seiten und deren Inhalte kann keine 
-    Verantwortung &uuml;bernommen werden.
+  include _includes/Disclaimer.pug
 
   h3 Kommentierte Codebeispiele
 
